# ariel

./: .gitignore  README.md  pyproject.toml
.github/scripts/: verify_tag.sh
.github/workflows/: pr.yaml  release.yaml
ariel/: __init__.py
examples/: run.py
tests/: test_backend.py
