[tool.poetry]
name = "ariel-client-triton"
version = "0.1.2"
description = "Client utilities for the triton inference server"
authors = ["Luis Vega <vegaluisjose@gmail.com>", "Jared Roesch <jroesch@octoml.ai>"]
packages = [
    { include = "ariel" }
]

[tool.poetry.dependencies]
python = ">=3.7"
protobuf = ">=3.5.0,<3.20" # copied from tritonclient - https://github.com/triton-inference-server/client/commit/efd1cbe0cca60e750aed395c78b3ee5c90139add
grpcio = "~1.41.0" # pinned to tritonclient's version
tritonclient = {version = "^2.22", extras= ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
transformers = "^4.19.2"
torch = "^1.11.0"
onnxruntime = "1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
